--- a/index.html
+++ b/index.html
@@ -24,5 +24,7 @@
     <title>Devchallenges</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <script src="index.js"></script>
+  </body>
 </html>
