--- a/index.html
+++ b/index.html
@@ -31,6 +31,35 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <nav class="nav">
+      <div class="nav-container">
+        <a href="#home" class="logo">Edie</a>
+        <div class="mobile-nav" id="mobile-nav">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
+        <ul class="nav-items" id="mobile-items">
+          <li class="nav-item">
+            <a href="#home" class="nav-link" id="home-page">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="#services" class="nav-link" id="services-page">Services</a>
+          </li>
+          <li class="nav-item">
+            <a href="#our-works" class="nav-link" id="our-works-page"
+              >Our Works</a
+            >
+          </li>
+          <li class="nav-item">
+            <a href="#clients" class="nav-link" id="clients-page">Clients</a>
+          </li>
+          <li class="nav-item">
+            <a href="#contact" class="nav-link" id="contact-page">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
     <script
       src="https://code.jquery.com/jquery-3.5.1.min.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
