added home section html

--- a/index.html
+++ b/index.html
@@ -60,6 +60,30 @@
         </ul>
       </div>
     </nav>
+    <section class="home" id="home">
+      <div class="container">
+        <div class="hero-text">
+          <h3 class="blue-sub">Unhappy with your website?</h3>
+          <h1 class="home-heading">
+            We create beautiful and fast web services
+          </h1>
+        </div>
+        <div class="hero-img"></div>
+        <div class="hero-join">
+          <h1 class="home-heading">Story, emotion and purpose</h1>
+          <p class="join-desc">
+            We help transform your ideas into real world applications that will
+            outperform your toughest competition and help you achieve your
+            strategic goals in short period of time.
+          </p>
+          <p class="join-small">Want us to contact you?</p>
+          <form action="/" class="form">
+            <input type="text" class="email" id="email" placeholder="Email" />
+            <button type="submit" class="btn-submit">Join</button>
+          </form>
+        </div>
+      </div>
+    </section>
     <script
       src="https://code.jquery.com/jquery-3.5.1.min.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
