--- a/index.html
+++ b/index.html
@@ -84,6 +84,40 @@
         </div>
       </div>
     </section>
+    <section class="services" id="services">
+      <div class="container small">
+        <h1 class="heading">We offer high demand services</h1>
+        <div class="cards">
+          <div class="card">
+            <i class="fas fa-pen card-icon blue"></i>
+            <h3 class="card-heading">UI/UX Design</h3>
+            <p class="card-desc">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis a
+              metus ac nulla consequat aliquet id quis turpis.
+            </p>
+            <button class="card-btn">Get started</button>
+          </div>
+          <div class="card">
+            <i class="fas fa-code card-icon green"></i>
+            <h3 class="card-heading">Front End</h3>
+            <p class="card-desc">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis a
+              metus ac nulla consequat aliquet id quis turpis.
+            </p>
+            <button class="card-btn">Get started</button>
+          </div>
+          <div class="card">
+            <i class="fas fa-database card-icon red"></i>
+            <h3 class="card-heading">Back End</h3>
+            <p class="card-desc">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis a
+              metus ac nulla consequat aliquet id quis turpis.
+            </p>
+            <button class="card-btn">Get started</button>
+          </div>
+        </div>
+      </div>
+    </section>
     <script
       src="https://code.jquery.com/jquery-3.5.1.min.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
