added our works section

--- a/index.html
+++ b/index.html
@@ -118,6 +118,39 @@
         </div>
       </div>
     </section>
+    <section class="our-work" id="our-works">
+      <div class="container small">
+        <h1 class="heading wide">Good design means good business</h1>
+        <div class="works-flex">
+          <div class="left">
+            <img src="smarthome.jpg" alt="pic" class="work-img" />
+            <p class="work-desc">Full stack application</p>
+            <h2 class="work-name">Smart home dashboard</h2>
+          </div>
+          <div class="right">
+            <img src="onboard.png" alt="pic" class="work-img" />
+            <p class="work-desc">UX/UI Design</p>
+            <h2 class="work-name">Onboard application</h2>
+          </div>
+        </div>
+        <div class="works-flex">
+          <div class="left">
+            <img src="booking.png" alt="pic" class="work-img" />
+            <p class="work-desc">Mobile application</p>
+            <h2 class="work-name">Booking system</h2>
+          </div>
+          <div class="right">
+            <img src="juice-product.png" alt="pic" class="work-img" />
+            <p class="work-desc">Front End Design</p>
+            <h2 class="work-name">Juice product homepage</h2>
+            <button class="btn-more">
+              see more
+              <i class="fas fa-long-arrow-alt-right"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
     <script
       src="https://code.jquery.com/jquery-3.5.1.min.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
