--- a/index.html
+++ b/index.html
@@ -151,6 +151,28 @@
         </div>
       </div>
     </section>
+    <section class="team">
+      <div class="container small">
+        <div class="team-flex">
+          <div class="team-left">
+            <div class="team-sub">Meet the team</div>
+            <h1 class="heading">We are chilled and a laidback team</h1>
+            <p class="team-desc">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            </p>
+          </div>
+          <div class="team-right">
+            <div class="image-flex">
+              <img src="person3.png" alt="pic" class="team-big" />
+              <div class="two">
+                <img src="person1.png" alt="pic" class="team-small" />
+                <img src="person2.png" alt="pic" class="team-mid" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <script
       src="https://code.jquery.com/jquery-3.5.1.min.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
