--- a/index.html
+++ b/index.html
@@ -173,6 +173,21 @@
         </div>
       </div>
     </section>
+    <section class="clients" id="clients">
+      <div class="container small">
+        <h2 class="clients-text">
+          "Fast and outstanding results. Edie understands their customer's
+          needs. They have a young and talented team."
+        </h2>
+        <div class="profile">
+          <img src="person4.png" alt="pic" class="profile-pic" />
+          <div class="profile-desc">
+            <p class="profile-name">Carlos Tran</p>
+            <p class="profile-job">The Decorate Gatsby</p>
+          </div>
+        </div>
+      </div>
+    </section>
     <script
       src="https://code.jquery.com/jquery-3.5.1.min.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
