--- a/index.html
+++ b/index.html
@@ -188,6 +188,47 @@
         </div>
       </div>
     </section>
+    <footer class="footer" id="contact">
+      <div class="container small">
+        <div class="footer-grid">
+          <div class="footer-links">
+            <a href="#home" class="footer-link">Home</a>
+            <a href="#services" class="footer-link">Services</a>
+            <a href="#our-works" class="footer-link">Our works</a>
+            <a href="#clients" class="footer-link">Clients</a>
+            <a href="#contact" class="footer-link">Contact</a>
+          </div>
+          <div class="socials">
+            <h1 class="footer-logo">Edie</h1>
+            <a href="#" class="social-link">
+              <img src="instagram.svg" alt="social" class="social-icon" />
+            </a>
+            <a href="#" class="social-link">
+              <img src="linkedin.svg" alt="social" class="social-icon" />
+            </a>
+            <a href="#" class="social-link">
+              <img src="twitter.svg" alt="social" class="social-icon" />
+            </a>
+          </div>
+          <div class="footer-form">
+            <p class="join-small light">Want us to contact you?</p>
+            <form action="/" class="form">
+              <input type="text" class="email" id="email" placeholder="Email" />
+              <button type="submit" class="btn-submit">Join</button>
+            </form>
+          </div>
+        </div>
+        <div class="bottom">
+          <a class="link" href="http://johannamagdalena.com/" target="_blank"
+            >Johanna Magdalena
+          </a>
+          <a class="link" href="https://devchallenges.io/" target="_blank">
+            @DevChallenges.io</a
+          >
+        </div>
+      </div>
+    </footer>
+
     <script
       src="https://code.jquery.com/jquery-3.5.1.min.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
